--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "main": "public/src/stacktical.js",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "fs": "0.0.2",
     "lodash": "^4.6.1",
     "request": "^2.72.0"
