--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "Stacktical",
+  "name": "Stacktical Continuous Scalability Tester",
   "version": "0.0.1",
-  "description": "Stacktical accurately predicts the scalability of your technology stack within seconds.",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/Stacktical/stacktical-api.git"
-  },
+  "description": "A Stacktical Platform solution that combines the Benchmarking and the Scalability Testing of your Stacktical Application.",
   "license": "SEE LICENSE IN LICENSE.md",
+  "private": true,
   "main": "public/src/stacktical.js",
   "dependencies": {
     "bluebird": "^3.4.6",
-    "fs": "0.0.2",
+    "ini": "^1.3.4",
     "lodash": "^4.6.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "request-promise": "^4.1.1",
+    "winston": "^2.3.0",
+    "winston-syslog": "^1.2.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Stacktical",
+  "author": "Stacktical, Inc",
   "homepage": "https://stacktical.com",
-  "bugs": {
-    "url": "https://github.com/Stacktical/stacktical-api/issues"
-  },
   "directories": {
     "test": "tests"
   },
   "devDependencies": {
     "mocha": "^2.5.3",
     "nock": "https://registry.npmjs.org/nock/-/nock-8.0.0.tgz"
-  },
-  "keywords": []
+  }
 }
