--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.4.6",
     "ini": "^1.3.4",
     "lodash": "^4.6.1",
+    "moment": "^2.17.1",
     "request": "^2.72.0",
     "request-promise": "^4.1.1",
     "winston": "^2.3.0",
