--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "ini": "^1.3.4",
-    "lodash": "^4.6.1",
+    "lodash": "https://registry.npmjs.org/lodash/-/lodash-4.6.1.tgz",
     "moment": "^2.17.1",
     "request": "^2.72.0",
     "request-promise": "^4.1.1",
