Better handling of siege.conf, fixes httpauth

--- a/.siege/siege.conf
+++ b/.siege/siege.conf
@@ -361,7 +361,7 @@ spinner = false
 #     login = jeff:supersecret
 #
 # login = 
-login = HTTP_AUTH:all
+login = HTTP_AUTH
 
 #
 # Login URL. This is the first URL to be hit by every siege
