--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,4 +5,4 @@ jobs:
             image: circleci/node:6.10
         steps:
             - checkout
-            - run: echo "Stacktical Willitscale"
+            - run: echo "Stacktical Willitscale!"
